--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>포트폴리오 첫페이지</title>
 </head>
 <body>
-    <h1>포트폴리오 설명 페이지</h1>
+    <h1>포트폴리오 링크 페이지</h1>
     <h2>
         <a href="./001.Info_PJ/index.html">Info PJ</a>
     </h2>
