--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>포트폴리오 소개 페이지</h1>
     <h2>
-        <a href="./001.Info_PJ/index.html">Info PJ</a>
+        <a href="./001.HTML학습/001.Info_PJ/">Info PJ</a>
     </h2>
 
 </body>
