--- a/001.HTML학습/003.DKB_PJ/index.html
+++ b/001.HTML학습/003.DKB_PJ/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
     <meta charset="uft-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>쓸쓸하고 찬란하신(神) 도깨비</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/media.css">
 </head>
 <body class="scbar">
     <!-- 1. 상단영역 -->
@@ -56,6 +58,10 @@
                 <li><a href="#">[심리 테스트]</a></li>
             </ul>
         </nav>
+
+        <!-- 모바일용 햄버거 버튼 -->
+        <button class="ham">≡</button>
+
     </header>
     <!-- 2. 컨텐츠영역 -->
     <main class="cont">
