--- a/001.HTML학습/006.CGV_PJ/003.site/index.html
+++ b/001.HTML학습/006.CGV_PJ/003.site/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CGV PJ</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-    
+    <!-- 1.상단영역 -->
+    <header id="top" class="part">
+        <!-- 1-1. 페이지 타이틀 -->
+        <h1 class="tit">CGC 예고편 상영관</h1>
+    </header>
+    <!-- 2.메인영역 -->
+    <main id="cont" class="part">
+        <!-- 2-1. 스크린 박스 -->
+        <div id="screen">
+            <iframe
+                src="https://www.youtube.com/embed/2hnkUpo_2yg?autoplay=1&mute=1&loop=1&playlist=2hnkUpo_2yg&playsinline=1"
+                allow="autoplay" allowfullscreen></iframe>
+        </div>
+        <!-- 2-2. 예고편 선택메뉴 -->
+        <nav class="mlist">
+            <ul>
+                <li><a href="#"><img src="images/m1.jpg" alt="비와 당신의 이야기"></a></li>
+                <li><a href="#"><img src="images/m2.jpg" alt="서복"></a></li>
+                <li><a href="#"><img src="images/m3.jpg" alt="미나리"></a></li>
+                <li><a href="#"><img src="images/m4.jpg" alt="더 스파이"></a></li>
+                <li><a href="#"><img src="images/m5.jpg" alt="노매드랜드"></a></li>
+                <li><a href="#"><img src="images/m6.jpg" alt="샹치"></a></li>
+            </ul>
+        </nav>
+    </main>
+    <!-- 3.하단영역 -->
+    <footer id="info" class="part">
+
+    </footer>
+
 </body>
+
 </html>
