--- a/Test/HTML/index2.html
+++ b/Test/HTML/index2.html
@@ -12,7 +12,7 @@
     <header class="top">
         <!-- 1.1 메인로고 -->
         <h1 class="logo">
-            <img src="" alt="">
+            <img src="./images/logo.png" alt="로고">
         </h1>
         <!-- 1.2 GNB로고 -->
         <nav class="gnb">
@@ -36,15 +36,15 @@
     </header>
     <!-- 2. 컨텐츠영역 -->
     <main class="cont">
-        <!-- 캐릭터박스 -->
+        <!-- 향수박스 -->
         <div id="cbx">
-            <!-- 1. 공유캐릭터 -->
+            <!-- 1. 향수 캐릭터 -->
             <div class="cat">
-                <!-- 캐릭터 이미지 박스 -->
+                <!-- 향수 박스 -->
                 <div class="ci">
-                    <!-- 캐릭터 이미지 -->
+                    <!-- 향수 이미지 -->
                     <img src="./images/mob_blanche_edp-50_c.jpg" alt="블랑쉬">
-                    <!-- 캐릭터 이름 박스  -->
+                    <!-- 향수박스  -->
                     <span>
                         <img src="./images/mob_blanche_edp-50_c.jpg" alt="블랑쉬">
                         
@@ -63,11 +63,11 @@
 
 
             </div>
-            <!-- 2. 김고은캐릭터 -->
+            <!-- 2. 향수 캐릭터 -->
             <div class="cat">
-                <!-- 캐릭터 이미지 박스 -->
+                <!-- 향수 이미지 박스 -->
                 <div class="ci">
-                    <!-- 캐릭터 이미지 -->
+                    <!-- 향수 이미지 -->
                     <img src="./images/mob_baldafrique_edp-50_c_1.jpg" alt="발 다프리크">
                     <!-- 캐릭터 이름 박스  -->
                     <span>
