--- a/001.HTML학습/006.CGV_PJ/003.site/index.html
+++ b/001.HTML학습/006.CGV_PJ/003.site/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CGV PJ</title>
     <link rel="stylesheet" href="css/main.css">
+    <!-- 기존 css 하단에 외부파일 미디어쿼리 넣기 -->
+    <link rel="stylesheet" href="css/media.css">
 
     <!-- script 요소 : 스크립트 코딩영역 -->
     <script>
@@ -119,11 +121,10 @@
                 <!-- 영사기 이미지 -->
                 <img src="./images/gnb.png" alt="영사기">
                 <!-- 빔표시박스 -->
-                <div class="bim">
-
-                </div>
+                <div class="bim"></div>
             </aside>
         </nav>
+
     </header>
     <!-- 2.메인영역 -->
     <main id="cont" class="part rbx">
