--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <li>
                 <a href="./001.HTML학습/003.DKB_PJ/" target="_blank">도깨비</a>
             </li>
+            <li>
+                <a href="./001.HTML학습/006.CGV_PJ/003.site/intro.html" target="_blank">CGV</a>
+            </li>
         </ul>
     </h2>
 </body>
