--- a/001.HTML학습/008.VOGUE_PJ/002.site/index.html
+++ b/001.HTML학습/008.VOGUE_PJ/002.site/index.html
@@ -10,12 +10,12 @@
 <body>
 
     <!-- 1. 상단영역 -->
-    <div>
+    <div id="top">
         <header class="top ibx">
             <!-- 1-1.상단메뉴 -->
-            <div class="tmenu fbx">
+            <div class="tmenu">
                 <!-- 1-1-1.sns박스 -->
-                <div class="sns cbx">
+                <div class="sns">
                     <a href="#" class="fi fi-instagram">
                         <span class="ir">
                             인스타그램
@@ -43,7 +43,7 @@
                     </a>
                 </div>
                 <!-- 1-1-2.사이드메뉴 -->
-                <div class="sideMenu cbx">
+                <div class="sideMenu">
                     <ul class="smbx">
                         <li>
                             <a href="#">SIDE MENU</a>
@@ -106,7 +106,7 @@
         </header>
     </div>
     <!-- 2. 메인영역 -->
-    <div>
+    <div id="cont" class="bgc">
         <main class="cont ibx">
             <!-- 컨텐츠1 - 파트1:1개 -->
             <section class="pt1 rbx">
@@ -194,9 +194,32 @@
         </main>
     </div>
     <!-- 3. 하단영역 -->
-    <div>
+    <div id="info" class="bgc">
         <footer class="info ibx">
-
+            <!-- 3-1.하단로고 -->
+            <div class="blogo">
+                <img src="images/footer_logo.png" alt="하단로고">
+            </div>
+            <!-- 3-2.회사주소 -->
+            <address class="addr">
+                WWW.VOGUE.COM Ⓒ CONDÉNAST ASIA PACIFIC. INC. ALL RIGHTS RESERVED. VOGUE.COM KOREA IS OPERATED BY DOOSAN MAGAZINE.
+            </address>
+            <!-- 3-3.하단링크 -->
+               
+            <ul class="blink">
+                <li>
+                    <a href="#">정기구독</a>
+                </li>
+                <li>
+                    <a href="#">회사소개</a>
+                </li>
+                <li>
+                    <a href="#">광고 및 제휴</a>
+                </li>
+                <li>
+                    <a href="#">개인정보 처리방침</a>
+                </li>
+            </ul>
         </footer>
     </div>
 
