--- a/001.HTML학습/008.VOGUE_PJ/002.site/index.html
+++ b/001.HTML학습/008.VOGUE_PJ/002.site/index.html
@@ -185,7 +185,20 @@
                         정기구독신청
                     </button>
                 </figure>
-            </div>
+
+                <!-- 1-5-4.하단링크박스 -->
+                <ul class="moblink">
+                    <li>
+                        <a href="#">회사소개 /</a>
+                    </li>
+                    <li>
+                        <a href="#">광고 및 제휴 /</a>
+                    </li>
+                    <li>
+                        <a href="#">개인정보 처리방침</a>
+                    </li>
+                </ul>
+            </div><!-- 모바일용메뉴 끝 -->
         </header>
     </div>
     <!-- 2. 메인영역 -->
