--- a/003.JS학습/RollingG.html
+++ b/003.JS학습/RollingG.html
@@ -26,6 +26,8 @@
 
         /* 갤러리부모박스 */
         #wrap {
+            position: relative;
+            /* 부모자격 - #mini */
             width: 520px;
             margin: 0 auto;
             text-align: center;
@@ -42,10 +44,68 @@
         #mbox img {
             vertical-align: -79px;
         }
+
+        /* 이미지 텍스트 출력박스 */
+        .imgtxt{
+            text-align: center;
+            color: red;
+            text-shadow: 1px 1px 1px #777;
+        }
+
+        /* 자동넘김 버튼박스 */
+        .abtn{
+            text-align: center;
+        }
+        .abtn button{
+            font-size: 1.5rem;
+        }
+        /* 처음에 멈춤버튼 숨기기 */
+        .stop{
+            display: none;
+        }
+
+        /* 미니언즈 */
+        #mini {
+            position: absolute;
+            top: 86%; /* 0으로 */
+            left: -100%; /* 0으로 */
+            /* 부모는 #wrap */
+            width: 150px;
+            transform: rotate(720deg); /* 0deg로 */
+            transition: all 1.5s ease-out;
+        }
+        /* 미니언즈 변경클래스 */
+        #mini.on{
+            top: 0;
+            left: 0;
+            transform: rotate(0deg);
+        }
     </style>
 
     <!-- JS 코딩구역 -->
     <script>
+        ///// 전역변수 구역 /////
+
+        // 1. 이미지번호 변수
+        let inum = 1; // 첫번째 이미지번호를 기억시킨다.
+
+        // 2. 이미지설명 배열변수 
+        let itxt = [
+            "노랑잉꼬가 먹이를 꼭꼭 찍어먹어요",
+            "분홍장미가 머리칼을 너풀너풀 날려요",
+            "백조같은 거위가 뚱하니 바라보아요",
+            "바이킹이 너무 어지러워 토가 나와요",
+            "눈사람이 가짜인데 진짜 같아 보여요",
+            "이 양은 보토양이 아니고 복제양 돌리에요",
+            "잉꼬 한쌍이 영화를 찍어요"
+        ];
+
+        // 3. 이미지설명 글자색 배열변수
+        let tcolor = ["red","orange","yelloew","green",
+        "blue","navy","purple"];
+
+
+
         //////////////// 로드구역 ////////////
         window.addEventListener("load", () => {
 
@@ -58,6 +118,10 @@
             // 중앙이미지: #mbox img
             let mimg = document.querySelector("#mbox img");
             // console.log("이미지설명:"+mimg.alt);
+
+            // 글자 출력박스 : .imgtxt
+            let imgtxt = document.querySelector(".imgtxt");
+            console.log("이미지텍스트:"+imgtxt.innerText);
 
             // 이미지번호 전역변수
             let inum = 1;
@@ -78,7 +142,7 @@
             ************************************/
             const chgImg = (dir) => { // dir - 방향전달값변수
                 // 1. 함수호출확인
-                console.log("이미지바꿔!!"+dir);
+                // console.log("이미지바꿔!!"+dir);
 
 
                 // 2. 대상선정: #mbox img -> mimg 변수
@@ -109,9 +173,109 @@
                 // 4. 이미지 변경하기
                 mimg.src = `./images/img${inum}.jpg`;
 
+                // 5. 이미지설명 배열에서 읽어와서 넣기
+                // 배열번호는 이미지번호 -1
+                imgtxt.innerText = itxt[inum-1];
+                // 이미지 설명박스 = 이미지 설명 배열[순번]
+
+                // 6. 이미지설명 글자색 배열순번으로 변경하기
+                imgtxt.style.color = tcolor[inum-1];
+                // 이미지 설명박스 CSS = 글자색배열[순번]
+
             }; //////////// chgImg 함수 /////////////
             ///////////////////////////////////////// 
 
+            /********************************************* 
+                [ JS 타이밍 함수 : Timing Function ]
+
+                1. setInterval(함수, 시간)
+                - 일정시간 간격으로 함수를 호출
+                - 시간은 1/1000, 단위없음(예:1000->1초)
+                -> 인터발함수를 지울때는 변수에 담고
+                    아래 함수를 호출한다.
+                    -> clearInterval(변수)
+                _______________________________________
+
+                2. setTimeout(함수, 시간)
+                - 일정시간 후 한번만 함수를 호출함
+                - 시간: 1/1000초, 단위 없음
+                -> 타임아웃함수를 지울때는 변수에 담고
+                    아래 함수를 호출한다.
+                    -> clearTimeout(변수)
+
+                    *********************************
+                    [ JS 클래스 관련 내장 함수 ]
+                    classList
+                    -> 클래스를 요소에 넣거나 빼기위한 객체
+                    ((관련메소드))
+                    1. add(클래스명) : 클래스 추가
+                    2. remove(클래스명) : 클래스 제거
+                    3. toggle(클래스명) : 클래스 추가/제거
+
+
+
+            *********************************************/
+
+            // 자동넘김 버튼 클릭시 인터발함수 셋팅하기
+            // 이벤트 대상: .abtn button
+            let abtn = document
+            .querySelectorAll(".abtn button") 
+            // console.log("버튼개수:"+abtn.length);
+
+            // 인터발용변수
+            let autoI;
+
+            // 자동넘김 버튼 클릭시
+            abtn[0].onclick = ()=>{
+                // 버튼자신 없애기
+                event.currentTarget
+                .style.display = "none";
+                // 화살표함수에서는 this 키워드 대신
+                // event.currentTarget을 사용
+
+                // 멈춤버튼 보이기(원래 display값으로)
+                abtn[1].style.display = "inline-block";
+
+                // 인터발 셋팅하기
+                autoI = setInterval(() => {
+                    chgImg(1);
+                }, 1500);
+            }; ////////////// click //////////////
+
+            // 멈춤버튼 클릭시 인터발지우기
+            // 인텉발함수를 지우려면 인터발셋팅시 변수에 할당
+            abtn[1].onclick = ()=>{
+                // 자기자신 숨기기
+                event.currentTarget
+                .style.display= "none";
+
+                // 자동넘김버튼 보이기
+                abtn[0].style.display = "inline-block";
+
+                // 인터발 멈추기
+                clearInterval(autoI);
+            }; /////////// click //////////////
+
+            /////// 타임아웃 함수로 미니언즈 애니하기 //////
+            // 원리: 미리셋팅된 클래스를 미니언즈요소에
+            // 일정시간 후 넣고/빼고/넣기를 해준다
+            // 변경대상: #mini
+            let mini = document.querySelector("#mini");
+
+            // 2초후에 미니언즈에 class "on"넣기
+            setTimeout(() => {
+                mini.classList.add("on");
+            }, 2000);
+            
+            // 4초후에 미니언즈에 class "on"빼기
+            setTimeout(() => {
+                mini.classList.remove("on");
+            }, 4000);
+
+            // 6초후에 미니언즈에 class "on"넣기
+            setTimeout(() => {
+                mini.classList.toggle("on");
+            }, 6000);
 
         }); //////// 로드구역 /////////////////
         ///////////////////////////////////////
@@ -119,6 +283,7 @@
 </head>
 
 <body>
+    <!-- 갤러리 부모박스 -->
     <div id="wrap">
         <!-- 타이틀 -->
         <h1>Rolling Gallery</h1>
@@ -134,7 +299,21 @@
         <a href="#" class="btn rb">
             <img src="./images/right_btn.png" alt="오른쪽버튼">
         </a>
+        <!-- 미니언즈 -->
+        <img src="./images/Minions.png" alt="미니언즈" id="mini">
     </div>
+
+    <!-- 이미지별 설명 텍스트 출력박스 -->
+    <h2 class="imgtxt">
+        노랑잉꼬가  먹이를 꼭꼭 찍어먹어요
+    </h2>
+
+    <!-- 자동넘김 버튼박스 -->
+    <div class="abtn">
+        <button class="start">자동넘김</button>
+        <button class="stop">멈춤</button>
+    </div>
+
 </body>
 
 </html>
