--- a/001.HTML학습/008.VOGUE_PJ/002.site/index.html
+++ b/001.HTML학습/008.VOGUE_PJ/002.site/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>보그 코리아에 오신것을 환영합니다!</title>
+    <link rel="shortcut icon" href="images/icon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fontisto@v3.0.4/css/fontisto/fontisto.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/media.css">
     <!-- 미디어쿼리를 본css하단에 link방식으로 넣어준다! -->
+    <script src="js/linksys.js"></script>
     <script src="js/common.js"></script>
 </head>
 <body>
