--- a/001.HTML학습/008.VOGUE_PJ/002.site/sub.html
+++ b/001.HTML학습/008.VOGUE_PJ/002.site/sub.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="css/sub.css">
     <link rel="stylesheet" href="css/media.css">
     <!-- 미디어쿼리를 본css하단에 link방식으로 넣어준다! -->
+    <script src="js/linksys.js"></script>
     <script src="js/common.js"></script>
+    <script src="js/sub.js"></script>
 </head>
 <body>
 
@@ -223,27 +225,9 @@
             <!-- 1. 서브페이지 탑영역 -->
              <header class="subtop">
                 <!-- 1-1. 서브타이틀 -->
-                <h2 class="stit">Fashion</h2>
+                <h2 class="stit"></h2>
                 <!-- 1-2. 서브메뉴(LNB-Local Navigation Bar) -->
-                <nav class="lnb">
-                    <ul> 
-                        <li>
-                            <a href="#">전체</a>
-                        </li>
-                        <li>
-                            <a href="#">트렌드</a>
-                        </li>
-                        <li>
-                            <a href="#">아이템</a>
-                        </li>
-                        <li>
-                            <a href="#">피플</a>
-                        </li>
-                        <li>
-                            <a href="#">화보</a>
-                        </li>
-                    </ul>
-                </nav>
+                <nav class="lnb"></nav>
              </header>      
 
             <!-- 2. 서브컨텐츠박스 -->
@@ -251,13 +235,13 @@
             <section class="pt2 rbx">
                 <div class="rbxIn fbx">
                     <div class="cbx bgi bg1-1">
-                        <h2>&lt;고양이를 부탁해&gt;</h2>
+                        <h2></h2>
                     </div>
                     <div class="cbx bgi bg1-2">
-                        <h2>패션계에서 가장 주목받는 신인 디자이너, 자크무스</h2>
+                        <h2></h2>
                     </div>
                     <div class="cbx bgi bg1-3">
-                        <h2>서울국제여성영화제 장편 경쟁 한국 영화 4편</h2>
+                        <h2></h2>
                     </div>
                 </div>
             </section>            
@@ -265,13 +249,13 @@
             <section class="pt2 rbx">
                 <div class="rbxIn fbx">
                     <div class="cbx bgi bg2-1">
-                        <h2>드라마 <알고 있지만>의 나비가 유행이라고?</h2>
+                        <h2></h2>
                     </div>
                     <div class="cbx bgi bg2-2">
-                        <h2>홍콩 누아르 영화 주인공으로 변신한 민주</h2>
+                        <h2></h2>
                     </div>
-                    <div class="cbx bgi bg">
-                        <h2>MSG워너비여, 영원하라!</h2>
+                    <div class="cbx bgi bg2-3">
+                        <h2></h2>
                     </div>
                 </div>
                 <h2></h2>
@@ -307,6 +291,11 @@
             </ul>
         </footer>
     </div>
+
+        <!-- 위로가기 버튼 -->
+        <a href="#" class="tbtn fi fi-angle-up">
+            <span class="ir">위로가기버튼</span>
+        </a>
 
     
 </body>
