--- a/002.CSS학습/RollingCube.html
+++ b/002.CSS학습/RollingCube.html
@@ -59,7 +59,7 @@
         /* 2.오른쪽면 */
         .cube>span:nth-child(2){
             background-color: green;
-            transform: rotateY(90deg) translateZ(150px);
+            transform: rotateY(90deg) translateZ(150px); /* 마우스 오버시 translateZ(200px) */
             /* y축회전먼저하고 z축밀기를 해야함!(순서중요) */
         }
         /* 3.뒷면 */
